add user management (not complete)
    note: current implementation only fetchs the first page of friend
    list and follower list of users.

--- a/app.yaml
+++ b/app.yaml
@@ -9,6 +9,9 @@ handlers:
   script: app.py
   login: admin
 
+- url: /update_users
+  script: app.py
+  login: admin
+
 - url: /.*
   script: app.py
-#login: required
