--- a/queue.yaml
+++ b/queue.yaml
@@ -2,7 +2,23 @@ queue:
 - name: update-users-queue
   rate: 30/h
   bucket_size: 1
+  retry_parameters:
+    task_retry_limit: 1
 
 - name: update-links-queue
   rate: 15/h
   bucket_size: 1
+  retry_parameters:
+    task_retry_limit: 1
+
+- name: fetch-queue
+  rate: 30/h
+  bucket_size: 5
+  retry_parameters:
+    task_retry_limit: 1
+
+- name: post-queue
+  rate: 30/h
+  bucket_size: 5
+  retry_parameters:
+    task_retry_limit: 1
