restore the cron job for fetching and posting

--- a/cron.yaml
+++ b/cron.yaml
@@ -1,4 +1,4 @@
 cron:
 - description: post update to twitter
-  url: /fetch_and_post_material
+  url: /cron/fetch_and_post
   schedule: every 12 minutes
